add more conditions, textarea inputs may not be working, popup not working

--- a/SFD/SFD_incident_card-form.html
+++ b/SFD/SFD_incident_card-form.html
@@ -11,7 +11,7 @@
             }
 
             form {
-                background:#22ddff;
+                background:#ffcccc;
                 border-radius: 10px;
                 padding: .4em;
             }
@@ -29,7 +29,7 @@
             #main-container {
                 max-width: 500px;
                 padding: 1em;
-                background: linear-gradient(#11ccee, #11aaff);
+                background:#ff0000;
                 border-radius: 20px;
             }
 
@@ -42,9 +42,44 @@
             .input-container {
                 width: 100%;
                 margin: auto;
-                text-align: center;
+                text-align: left;
                 padding: .2em;
             }
+
+
+        /* Pop-up content shifted off-screen when not in view. Still readable by screen-reader software. When targeted it fills the browser window. */
+        .pop-up {
+            position: absolute;
+            top: 0em;
+            left: -500em;
+        }
+
+        .pop-up:target {
+            position: static;
+            left: 0em;
+        }
+
+        /* The pop-up itself */
+        .popBox {
+            background: rgb(240, 240, 240);
+            position: absolute;
+            left: 2em;
+            right: 2em;
+            top: 2em;
+            bottom: 2em;
+            z-index: 10;
+            border: 3px solid rgb(150, 150, 150);
+            border-radius: 1rem;
+            box-shadow: 0.4rem 0.4rem 0.5rem 0.8rem rgb(150, 150, 150);
+            opacity: 0;
+            transition: opacity 0.8s ease-out;
+        }
+
+        :target .popBox {
+            position: fixed;
+            opacity: 1;
+        }
+
         </style>
     </head>
 
@@ -57,9 +92,20 @@
                 enctype="multipart/form-data"
             >
                 <div class="section">
-                    <b>Winlink message data:</b>
+                    <h2>Seattle Fire Department<br>
+                    Incident Card</h2>
                 </div>
-            <div class="input-container">
+
+                <div class="formReadVersion">
+                    <input type="button" value="Form Information - READ" id="formInfoReadBtn" />
+                    <label id="thisVersion"></label>
+                </div>
+
+                <div class="section">
+                    <h3>Winlink message data:</h3>
+                </div>
+
+                <div class="input-container">
                     <label for="mycall">Your callsign:</label>
                     <input type="text" name="mycall" id="myCallsign" />
                 </div>
@@ -70,7 +116,8 @@
                 </div>
                 <div class="input-container">
                     <label for="acsno">ACS Message Number:</label>
-                    <input type="text" name="acsno" id="ACSno" value="STN00-0000"/>
+                    <input type="text" name="acsno" id="ACSno"
+                    placeholder="STN00-0001" value=""/>
                 </div>
                  <div class="input-container">
                     <label for="Exer">This is an exercise:</label>
@@ -81,10 +128,10 @@
                     <input type="hidden" name="IsExer" id="IsExer" />
                 </div>
                 <div class="section">
-                    <b>Form data:</b>
+                    <h3>Form data:</h3>
                 </div>
                 <div class="input-container">
-                    <label for="company">CO (company):</label>
+                    <label for="company">CO:</label>
                     <input type="text" name="company" id="company" value=""/>
                 </div>
                 <div class="input-container">
@@ -92,11 +139,40 @@
                     <input type="text" name="time" id="Time" value=""/>
                 </div>
                  <div class="input-container">
-                    <label for="location">LOCATION:</label>
-                    <input type="text" name="location" id="location" value=""/>
+                    <label for="location">LOCATION:<br></label>
+                    <textarea rows="3" cols="50"
+                           name="location" id="location"></textarea>
                 </div>
                  <div class="section">
-                    CONDITIONS:
+                    <b>CONDITIONS:</b>
+                </div>
+                <div class="input-container">
+                    <label for="collapse-risk">Collapse - risk:</label>
+                    <input type="checkbox" name="collapse-risk"
+                        value="collapse-risk"
+                        onclick="if(document.getElementById('IsCollapse-risk').value =='')
+                        {document.getElementById('IsCollapse-risk').value = 'X'}
+                        else { document.getElementById('IsCollapse-risk').value = '';}"/>
+                    <input type="hidden" name="IsCollapse-risk"
+                    id="IsCollapse-risk" />
+
+                    <label for="collapse-partial">partial:</label>
+                    <input type="checkbox" name="collapse-partial"
+                        value="collapse-partial"
+                        onclick="if(document.getElementById('IsCollapse-partial').value =='')
+                        {document.getElementById('IsCollapse-partial').value = 'X'}
+                        else { document.getElementById('IsCollapse-partial').value = '';}"/>
+                    <input type="hidden" name="IsCollapse-partial"
+
+                    id="IsCollapse-full" />
+                    <label for="collapse-full">full:</label>
+                    <input type="checkbox" name="collapse-full"
+                        value="collapse-full"
+                        onclick="if(document.getElementById('IsCollapse-full').value =='')
+                        {document.getElementById('IsCollapse-full').value = 'X'}
+                        else { document.getElementById('IsCollapse-full').value = '';}"/>
+                    <input type="hidden" name="IsCollapse-full"
+                    id="IsCollapse-full" />
                 </div>
                 <div class="input-container">
                     <label for="fire">Fire:</label>
@@ -107,12 +183,28 @@
                     <input type="hidden" name="IsFire" id="IsFire" />
                 </div>
                 <div class="input-container">
-                    <label for="flood">Flood:</label>
-                    <input type="checkbox" name="flood"  value="flood"
-                     onclick="if(document.getElementById('IsFlood').value =='')
-                     {document.getElementById('IsFlood').value = 'X'}
-                     else { document.getElementById('IsFlood').value = '';}"/>
-                    <input type="hidden" name="IsFlood" id="IsFlood" />
+                    <label for="fuel-gas-water">Fuel/Gas/Water:</label>
+                    <input type="checkbox" name="fuel-gas-water" value="fuel-gas-water"
+                     onclick="if(document.getElementById('IsFGW').value =='')
+                     {document.getElementById('IsFGW').value = 'X'}
+                     else { document.getElementById('IsFGW').value = '';}"/>
+                    <input type="hidden" name="IsFGW" id="IsFGW" />
+                </div>
+                <div class="input-container">
+                    <label for="hazmat">HAZMAT:</label>
+                    <input type="checkbox" name="hazmat" value="hazmat"
+                     onclick="if(document.getElementById('IsHazmat').value =='')
+                     {document.getElementById('IsHazmat').value = 'X'}
+                     else { document.getElementById('IsHazmat').value = '';}"/>
+                    <input type="hidden" name="IsHazmat" id="IsHazmat" />
+                </div>
+                <div class="input-container">
+                    <label for="hazmat">Landslide:</label>
+                    <input type="checkbox" name="landslide" value="landslide"
+                     onclick="if(document.getElementById('IsLandslide').value =='')
+                     {document.getElementById('IsLandslide').value = 'X'}
+                     else { document.getElementById('IsLandslide').value = '';}"/>
+                    <input type="hidden" name="IsLandslide" id="IsLandslide" />
                 </div>
                 <div class="input-container">
                     <label for="other">Other:</label>
@@ -121,24 +213,33 @@
                      {document.getElementById('IsOther').value = 'X'}
                      else { document.getElementById('Isother').value = '';}"/>
                     <input type="hidden" name="IsOther" id="IsOther" />
-                    <label for="other_desc">Other description:</label>
+                    <label for="other_desc"></label>
                     <input type="text" name="other_desc" id="other_desc" value=""/>
                 </div>
+                 <div class="section">
+                    <b>LEVELS (resource needs):</b>
+                </div>
                   <div class="input-container">
-                    <label for="levels_city">LEVELS (resource needs)-- CITY:</label>
+                    <label for="levels_city">CITY:</label>
                     <input type="text" name="levels_city" id="levels_city" value=""/>
+                </div>
+                  <div class="input-container">
                     <label for="levels_bat">BATTALION:</label>
                     <input type="text" name="levels_bat" id="levels_bat" value=""/>
+                </div>
+                  <div class="input-container">
                     <label for="levels_company">COMPANY:</label>
                     <input type="text" name="levels_company" id="levels_company" value=""/>
                 </div>
                 <div class="input-container">
-                    <label for="actions">ACTIONS & NEEDS:</label>
-                    <input type="text" name="actions" id="actions" value=""/>
+                    <label for="actions"><b>ACTIONS & NEEDS:<br></b></label>
+                    <textarea rows="5" cols="50"
+                           name="actions" id="actions"></textarea>
                 </div>
                 <div class="input-container">
-                    <label for="cardid">SFD card ID:</label>
-                    <input type="text" name="cardid" id="CardID" value="B0-000"/>
+                    <label for="cardid">SFD incident card Number:</label>
+                    <input type="text" name="cardid" id="CardID"
+                    placeholder="BX-XXX" value=""/>
                 </div>
 
                 <div id="submit-container">
@@ -149,6 +250,20 @@
             <section>
                 <input type="button" name="SaveButton" id="saveButton" value="Save Data" />
             </section>
+
+        <section id="pop1" class="pop-up">
+        <!-- The pop-up block -->
+
+        <div class="popBox">
+            <!-- If the content becomes larger than the pop-up this div will scroll the content -->
+            <input type="button" id="closePopBtn" value="Click to close this help" class="close" />
+
+            <div class="popScroll">
+                <h2>Winlink Operator Instructions</h2>
+
+                <h3>About This Form</h3>
+
+            </div>
         </div>
 
         <script>
@@ -230,6 +345,20 @@
             document.getElementById('saveButton').addEventListener('click', () => {
                 saveFormInputElementsToFile();
             });
+
+        // Add event listeners for "Form Information - READ" and "Close Pop-up" buttons
+        document.getElementById('formInfoReadBtn').addEventListener('click', function () {
+            getFocusableElements('pop1').forEach(el => {
+                el.removeAttribute('tabindex');
+            });
+            location.href = '#pop1';
+        });
+        document.getElementById('closePopBtn').addEventListener('click', function () {
+            getFocusableElements('pop1').forEach(el => {
+                el.setAttribute('tabindex', '-1');
+            });
+            location.href = '#close';
+        });
         </script>
     </body>
 </html>
