check 'This is an exercise' by default

--- a/SFD/SFD_incident_card-form.html
+++ b/SFD/SFD_incident_card-form.html
@@ -85,7 +85,7 @@
                 </div>
                  <div class="input-container">
                     <label for="Exer">This is an exercise:</label>
-                    <input type="checkbox" name="Exer"  value="Exer"
+                    <input type="checkbox" name="Exer"  value="Exer" checked
                      onclick="if(document.getElementById('IsExer').value =='')
                      {document.getElementById('IsExer').value = '** THIS IS AN EXERCISE **'}
                      else { document.getElementById('IsExer').value = '';}"/>
