attempt to use EventListener for checkbox

--- a/SFD/SFD_incident_card-form.html
+++ b/SFD/SFD_incident_card-form.html
@@ -84,12 +84,16 @@
                         placeholder="STN00-0001" value=""/>
                 </div>
                  <div class="input-container">
-                    <label for="Exer">This is an exercise:</label>
-                    <input type="checkbox" name="Exer"  value="Exer" checked
+                    <label for="Exer">This is an exercise1:</label>
+                    <input type="checkbox" name="Exer"  value="Exer"
                      onclick="if(document.getElementById('IsExer').value =='')
                      {document.getElementById('IsExer').value = '** THIS IS AN EXERCISE **'}
                      else { document.getElementById('IsExer').value = '';}"/>
                     <input type="hidden" name="IsExer" id="IsExer" />
+                </div>
+                 <div class="input-container">
+                    <label for="Exer2">This is another exercise:</label>
+		    <input type="checkbox" name="IsExer2" id="IsExer2"  value="no click" />
                 </div>
                 <div class="section">
                     <h3>Form data:</h3>
@@ -111,7 +115,7 @@
                     <b>CONDITIONS:</b>
                 </div>
                 <div class="input-container">
-                    <label for="collapse-risk">Collapse - risk:</label>
+                    <label for="collapse-risk">Collapse - &nbsp;&nbsp;&nbsp;&nbsp;risk:</label>
                     <input type="checkbox" name="collapse-risk"
                         value="collapse-risk"
                         onclick="if(document.getElementById('IsCollapse-risk').value =='')
@@ -120,16 +124,16 @@
                     <input type="hidden" name="IsCollapse-risk"
                         id="IsCollapse-risk" />
 
-                    <label for="collapse-partial">partial:</label>
+                    <label for="collapse-partial">&nbsp;&nbsp;&nbsp;&nbsp;partial:</label>
                     <input type="checkbox" name="collapse-partial"
                         value="collapse-partial"
                         onclick="if(document.getElementById('IsCollapse-partial').value =='')
                         {document.getElementById('IsCollapse-partial').value = 'X'}
                         else { document.getElementById('IsCollapse-partial').value = '';}"/>
                     <input type="hidden" name="IsCollapse-partial"
+                        id="IsCollapse-partial" />
 
-                        id="IsCollapse-full" />
-                    <label for="collapse-full">full:</label>
+                    <label for="collapse-full">&nbsp;&nbsp;&nbsp;&nbsp;full:</label>
                     <input type="checkbox" name="collapse-full"
                         value="collapse-full"
                         onclick="if(document.getElementById('IsCollapse-full').value =='')
@@ -209,11 +213,14 @@
                      <input type="text" name="cardid2" id="CardID2" size="1"
                         value=""/>
                 </div>
+	        <div class="input-container">
+                    <input type="submit" name="Submit" value="Submit" />
+	        </div>
 
             </form>
 
+
             <section>
-                <input type="submit" name="Submit" value="Submit" />
                 <input type="button" name="SaveButton" id="saveButton" 
                     value="Save Data" />
                 <input type="button" name="LoadButton" id="loadButton"
@@ -296,6 +303,13 @@
                 document.body.appendChild(downloadLink);
                 downloadLink.click();
             }
+
+            document.getElementById('IsExer2').addEventListener('click', function() {
+				if (IsExer2.checked) {
+						this.value = '** THIS IS AN EXERCISE **'}
+				else {
+						this.value = '** NOT AN EXERCISE **'}
+				}
 
             document.getElementById('saveButton').addEventListener('click', () => {
                 saveFormInputElementsToFile();
